moved connection string to appsettings, added AutoMapper, started work on hashing method

--- a/Dune/appsettings.json
+++ b/Dune/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=DARRENS-DESKTOP; Database=Dune; Trusted_Connection=True"
   }
 }
