--- a/Dune/appsettings.Development.json
+++ b/Dune/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=DARRENS-DESKTOP; Database=Dune; Trusted_Connection=True"
   }
 }
